--- a/assets/gitbook/custom-local.css
+++ b/assets/gitbook/custom-local.css
@@ -3,3 +3,7 @@
  * Its purpose is for users of the theme to be able to add css rules from a blank file
  *   these get simply added to the ones already active in the layout.
  */
+
+ hr.red {
+    border-top: 2px solid red;
+  }
